--- a/src/pages/portfolio/projectsData.json
+++ b/src/pages/portfolio/projectsData.json
@@ -5,7 +5,7 @@
     "description": "J’ai réalisé ce site e-commerce afin d'apprendre les bases du framework Symfony. J’ai également présenté ce projet pour mon épreuve de fin d’année, ce qui m’a permis d’avoir un 19/20 coefficient 4.",
     "technologies": "PHP | SYMFONY",
     "dispo": "Hors ligne",
-    "github": "https://github.com/mdyeates/bike-buddy",
+    "github": "https://github.com/Emin0342/SymfonyEcommece",
     "deployed": "https://norrinradd8.github.io/bike_buddy/",
     "bgcolor": "#f37737",
     "id": "1"
@@ -17,7 +17,7 @@
     "dispo" : "En ligne",
     "description": " This dashboard uses the OpenWeatherMap API to retrieve detailed weather data, including the city name, date, weather icon, temperature, humidity, and wind speed. The dashboard has a 5-day forecast feature and a search history feature that saves past searches for easy access. It also has a dark/light theme that changes the look of the page based on day or night in the searched location and uses the geolocation API to automatically determine the user's current location and display the weather.",
     "github": "https://github.com/mdyeates/weather-app",
-    "deployed": "https://mdyeates.github.io/weather-app/",
+    "deployed": "https://elegance-cuisine.com/",
     "bgcolor": "#29cbe0",
     "id": "2"
   },
@@ -26,9 +26,9 @@
     "image": "./projectImages/team.png",
     "technologies": "REACT JS",
     "dispo" : "En ligne",
-    "description": "Team Dashboard is a Node command-line application that takes in information about employees to generate a dynamic HTML web page.",
-    "github": "https://github.com/mdyeates/team-dashboard",
-    "deployed": "https://drive.google.com/file/d/1_atUXTM-L9r4NccsrPaaWqPyNu37ftwH/view",
+    "description": "Ce projet est le portfolio que vous consulter en ce moment même ! J'ai conçu ce portfolio afin d'apprendre les bases de la librairie React.js et d'améliorer mes notions en Javascript. Comme pour mon projet e-commerce, j'ai utiliser un template afin de le modifier a mes besoins et de comprendre l'utilité, le fonctionnement des différents dossier / fichiers.",
+    "github": "https://github.com/Emin0342/PortfolioReact",
+    "deployed": "https://emincor.netlify.app/",
     "bgcolor": "#6c4bf4",
     "id": "3"
   },
